Setting configuration for 15.1